# EasyEncipher

./: CMakeLists.txt  Decoder  GetRandom.cpp  GetRandom.h  main.cpp  token.txt
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
Dependencies/Converters/CasesConverter/Converter/: CasesConverter.cpp  CasesConverter.h
Dependencies/Converters/CasesConverter/Recorder/: CasesRecorder.cpp  CasesRecorder.h
Dependencies/EnciphPart/DecodePart/: Decoder.cpp
Dependencies/EnciphPart/EncodePart/: Encoder.cpp  Encoder.h
Dependencies/EnciphPart/GenerateSecretKey/: TokenGenerator.cpp  TokenGenerator.h
Dependencies/EncipherPart/DecodePart/: Decode.cpp  Decode.h  Decoder.cpp  Decoder.h  SecondDecode.cpp  SecondDecode.h
Dependencies/EncipherPart/EncodePart/: Encode.cpp  Encode.h  Encoder.cpp  SecondEncode.cpp  SecondEncode.h
Dependencies/EncipherPart/GenerateSecretKey/: EigenValueGenerator.cpp  EigenValueGenerator.h  Quaternion.cpp  TokenGenerator.h  ViceTokenGenerator.cpp  ViceTokenGenerator.h
Dependencies/Tools/: InString.cpp  InString.h  PauseProgram.cpp  PauseProgram.h  Quaternion.cpp  Quaternion.h  compile.bat  compile.sh
Program/DecodeProgram/: DecodeProgram.cpp
Program/EncodeProgram/: EncodeProgram.cpp
Program/GetSecretKey/: GetSecretKey.cpp
Releases/EasyEncoder/Debug/1.1.1-beta/: token.txt
Releases/EasyEncoder/Debug/Linux/1.1.2-beta/: Encoder  GetSecretKey
Releases/EasyEncoder/Debug/Linux/1.1.3-beta/: Decoder  Encoder  GetSecretKey  update_log.txt
Releases/EasyEncoder/Debug/Linux/Compressed/: 1.1.2-beta.tar.xz  1.1.3-beta.tar.xz
Releases/EasyEncoder/Debug/Windows/1.0.1-beta/: key.txt
Releases/EasyEncoder/Debug/Windows/1.1.0-beta/: update_log.txt
Releases/EasyEncoder/Debug/Windows/1.1.1-beta/: update_log.txt
Releases/EasyEncoder/Debug/Windows/1.1.2-beta/: update_log.txt
Releases/EasyEncoder/Debug/Windows/1.1.3-beta/: token.txt  update_log.txt
Releases/EasyEncoder/Debug/Windows/2.0.0-beta/: token.txt  update_log.txt
Releases/EasyEncoder/Release/2.0.1-release/: update_log.txt
